Replace Imagepreview with the cryaotic imagebox
- Has many awesome features like zooming and such

--- a/W3Edit/app.config
+++ b/W3Edit/app.config
@@ -31,6 +31,10 @@
         <assemblyIdentity name="ICSharpCode.SharpZipLib" publicKeyToken="1b03e6acf1164f73" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-0.86.0.518" newVersion="0.86.0.518" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Tao.OpenGl" publicKeyToken="1ca010269a4501ef" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.7" newVersion="2.1.0.7" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
