--- a/W3Edit/packages.config
+++ b/W3Edit/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CrashReporter.NET.Official" version="1.5.1" targetFramework="net461" />
+  <package id="CyotekImageBox" version="1.2.0-beta1" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.0-alpha8" targetFramework="net45" />
-  <package id="DockPanelSuite.ThemeVS2015" version="2.12.0" targetFramework="net461" />
+  <package id="DockPanelSuite.ThemeVS2015" version="2.13.0" targetFramework="net461" />
   <package id="lz4net" version="1.0.10.93" targetFramework="net461" />
   <package id="LZ4PCL" version="1.0.0" targetFramework="net461" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
