--- a/W3Edit.W3Strings/W3Edit.W3Strings.csproj
+++ b/W3Edit.W3Strings/W3Edit.W3Strings.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="W3LanguageKey.cs" />
+    <Compile Include="W3Language.cs" />
     <Compile Include="W3StringBlock1.cs" />
     <Compile Include="W3StringBlock2.cs" />
     <Compile Include="W3StringExtensions.cs" />
