Added DDSHeader - Very simple 2D XBM texture to DDS converting works - Readed compression from XBM is not correct

--- a/W3Edit.Textures/W3Edit.Cache.csproj
+++ b/W3Edit.Textures/W3Edit.Cache.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DDSHeader.cs" />
     <Compile Include="DDSImageParser.cs" />
     <Compile Include="ImageUtility.cs" />
     <Compile Include="Program.cs" />
