--- a/W3Edit.W3Speech/W3Edit.W3Speech.csproj
+++ b/W3Edit.W3Speech/W3Edit.W3Speech.csproj
@@ -49,6 +49,7 @@
     <Compile Include="FileTools.cs" />
     <Compile Include="LanguageTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamTools.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\W3Edit.W3Strings\W3Edit.W3Strings.csproj">
