--- a/WolvenKit.Net/WolvenKit.Net.csproj
+++ b/WolvenKit.Net/WolvenKit.Net.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Const.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="Response.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
