--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -197,6 +197,12 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="CopyController.cs" />
     <Compile Include="FileSavedEventArgs.cs" />
+    <Compile Include="frmDebug.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmDebug.Designer.cs">
+      <DependentUpon>frmDebug.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmImagePreview.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -442,6 +448,9 @@
     <EmbeddedResource Include="frmCR2WDocument.resx">
       <DependentUpon>frmCR2WDocument.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmDebug.resx">
+      <DependentUpon>frmDebug.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmEmbeddedFiles.resx">
       <DependentUpon>frmEmbeddedFiles.cs</DependentUpon>
     </EmbeddedResource>
@@ -563,6 +572,10 @@
       <Project>{f3129e02-31ad-4327-a9ef-7c52d777c71f}</Project>
       <Name>WolvenKit.CR2W</Name>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </ProjectReference>
+    <ProjectReference Include="..\WolvenKit.Net\WolvenKit.Net.csproj">
+      <Project>{f60b8974-617d-45b5-bd33-68a9f739de4f}</Project>
+      <Name>WolvenKit.Net</Name>
     </ProjectReference>
     <ProjectReference Include="..\WolvenKit.Scaleform\WolvenKit.Scaleform.csproj">
       <Project>{031dd6da-b643-4c2a-a30d-a2e2212724c2}</Project>
