--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,15 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ImaAdpcmCodec.cs" />
+    <Compile Include="BNK.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RiffChunk.cs" />
-    <Compile Include="RiffFile.cs" />
-    <Compile Include="WavFile.cs" />
-    <Compile Include="WavProcessor.cs" />
-    <Compile Include="WwiseSound.cs" />
-    <Compile Include="WwiseSoundbank.cs" />
+    <Compile Include="Sections\BKHD.cs" />
+    <Compile Include="Sections\DATA.cs" />
+    <Compile Include="Sections\DIDX.cs" />
+    <Compile Include="Sections\HIRC.cs" />
+    <Compile Include="Sections\SoundStructure.cs" />
+    <Compile Include="Sections\STID.cs" />
+    <Compile Include="Sections\Unknown.cs" />
+    <Compile Include="SoundFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
