--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DCBBE807-CD6E-493E-8C04-DB976A1591EA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Wwise</RootNamespace>
     <AssemblyName>WolvenKit.Wwise</AssemblyName>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,17 +47,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BNK.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="BNK\BNK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sections\BKHD.cs" />
-    <Compile Include="Sections\DATA.cs" />
-    <Compile Include="Sections\DIDX.cs" />
-    <Compile Include="Sections\HIRC.cs" />
-    <Compile Include="Sections\SoundStructure.cs" />
-    <Compile Include="Sections\STID.cs" />
-    <Compile Include="Sections\Unknown.cs" />
-    <Compile Include="SoundFile.cs" />
+    <Compile Include="BNK\Sections\BKHD.cs" />
+    <Compile Include="BNK\Sections\DATA.cs" />
+    <Compile Include="BNK\Sections\DIDX.cs" />
+    <Compile Include="BNK\Sections\HIRC.cs" />
+    <Compile Include="BNK\Sections\SoundStructure.cs" />
+    <Compile Include="BNK\Sections\STID.cs" />
+    <Compile Include="BNK\Sections\Unknown.cs" />
+    <Compile Include="BNK\SoundFile.cs" />
+    <Compile Include="WEM\ImaAdpcmCodec.cs" />
+    <Compile Include="WEM\RiffChunk.cs" />
+    <Compile Include="WEM\RiffFile.cs" />
+    <Compile Include="WEM\WavFile.cs" />
+    <Compile Include="WEM\WavProcessor.cs" />
+    <Compile Include="WEM\WwiseSound.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
