Fixed xml errors in #6
- Now it loads and saves perfectly
- Also moved soundbanksinfo to /.Wwise

--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BNK\Sections\STID.cs" />
     <Compile Include="BNK\Sections\Unknown.cs" />
     <Compile Include="BNK\SoundFile.cs" />
+    <Compile Include="SoundBanksInfo.cs" />
     <Compile Include="WEM\ImaAdpcmCodec.cs" />
     <Compile Include="WEM\RiffChunk.cs" />
     <Compile Include="WEM\RiffFile.cs" />
