--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: csharp
 solution: WolvenKit.sln
-
 install:
- - msbuild WolvenKit.sln
+  - nuget restore WolvenKit.sln
+  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+script:
+  - xbuild /p:Configuration=Release WolvenKit.sln
