--- a/WolvenKit.Interfaces/WolvenKit.Interfaces.csproj
+++ b/WolvenKit.Interfaces/WolvenKit.Interfaces.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IWitcherArchiveType.cs" />
     <Compile Include="IWitcherFile.cs" />
     <Compile Include="IWitcherTreeNode.cs" />
+    <Compile Include="ParentRootNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
