--- a/WolvenKit.Cache/WolvenKit.Cache.csproj
+++ b/WolvenKit.Cache/WolvenKit.Cache.csproj
@@ -59,10 +59,11 @@
     <Compile Include="ImageUtility.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoundBanksInfo.cs" />
-    <Compile Include="SoundManager.cs" />
-    <Compile Include="Sound_Cache.cs" />
-    <Compile Include="Texture_Cache.cs" />
+    <Compile Include="Sound\SoundBanksInfo.cs" />
+    <Compile Include="Sound\SoundManager.cs" />
+    <Compile Include="Sound\Sound_Cache.cs" />
+    <Compile Include="Texture\TextureManager.cs" />
+    <Compile Include="Texture\Texture_Cache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
