--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="Shaders.cs" />
+    <Compile Include="TargaImage.cs" />
     <EmbeddedResource Include="Bithack3D.resx">
       <DependentUpon>Bithack3D.cs</DependentUpon>
       <SubType>Designer</SubType>
