--- a/WolvenKit.Wwise/WolvenKit.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit.Wwise.csproj
@@ -58,6 +58,9 @@
     <Compile Include="BNK\Sections\Unknown.cs" />
     <Compile Include="BNK\SoundFile.cs" />
     <Compile Include="SoundBanksInfo.cs" />
+    <Compile Include="Sound\SoundBanksInfo.cs" />
+    <Compile Include="Sound\SoundManager.cs" />
+    <Compile Include="Sound\Sound_Cache.cs" />
     <Compile Include="WEM\ImaAdpcmCodec.cs" />
     <Compile Include="WEM\RiffChunk.cs" />
     <Compile Include="WEM\RiffFile.cs" />
@@ -67,6 +70,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.Cache\WolvenKit.Cache.csproj">
+      <Project>{17cf5901-6e1f-467f-afe0-3cc04dc9688a}</Project>
+      <Name>WolvenKit.Cache</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WolvenKit.CR2W\WolvenKit.CR2W.csproj">
+      <Project>{f3129e02-31ad-4327-a9ef-7c52d777c71f}</Project>
+      <Name>WolvenKit.CR2W</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WolvenKit.Interfaces\WolvenKit.Interfaces.csproj">
+      <Project>{4d1019f1-f099-450f-85b8-697e0332a94f}</Project>
+      <Name>WolvenKit.Interfaces</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
