Deleted unnecessary program.cs from /.Cache

--- a/WolvenKit.Cache/WolvenKit.Cache.csproj
+++ b/WolvenKit.Cache/WolvenKit.Cache.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{17CF5901-6E1F-467F-AFE0-3CC04DC9688A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Cache</RootNamespace>
     <AssemblyName>WolvenKit.Cache</AssemblyName>
@@ -54,7 +54,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="DDSHeader.cs" />
     <Compile Include="DDSImageParser.cs" />
     <Compile Include="ImageUtility.cs" />
